<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Habit Tracker</string>
    <string name="title_habit_detail">Habit Detail</string>
    <string name="habits_title">Habits</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Habit name</string>
    <string name="action_habit_add">Add Habit</string>
    <string name="title_activity_edit_habit">EditHabit</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_habit_title">Title:</string>
    <string name="edit_habit_title_hint">The name of the habit</string>
    <string name="edit_habit_description">Description:</string>
    <string name="edit_habit_description_hint">A short description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_habit">Save Habit</string>
    <string name="edit_habit_positive_title">Positive</string>
    <string name="occurrences_count">Count:</string>
    <string name="occurrences_last">Last:</string>
    <string name="occurrences_details">Details</string>
    <string name="never">Never</string>
    <string name="title_activity_occurence_detail">OccurenceDetailActivity</string>
    <string name="title_activity_occurrence_list">OccurrenceListActivity</string>
    <string name="delete_occurrence">Do you want delete this occurrence?</string>
    <string name="delete">Delete</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="action_occurrence_add">Add Occurrence</string>
    <string name="title_activity_quick_add_occurrence">QuickAddOccurrenceActivity</string>
    <string name="title_activity_add_occurrence_tag">AddOccurrenceTag</string>
    <string name="write_tag_text">Write Tag for this Habit: </string>
    <string name="write_tag">Write</string>
    <string name="add_occurrence_tag_text">Write Tag</string>
    <string name="write_tag_description_text">Move the phone to the tag you want to trigger this habit.</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="delete_habit_dialog">Are you sure you want to delete this habit?</string>
    <string name="mimeTypeNdef">application/ch.isageek.tyderion.habittracker.occurrence.add</string>
    <string name="not_valid_habit">Not a valid habit</string>
    <string name="action_export">Export / Import</string>
    <string name="title_activity_data_export">DataExportActivity</string>
    <string name="backup_file_picker_title_string">Pick Backup File</string>
    <string name="backup_pick_file_button_title">Pick</string>
    <string name="backup_button_default_location">Default</string>
    <string name="backup_export_button_title">Export to File</string>
    <string name="backup_import_button_title">Import from File</string>
    <string name="backup_write_error">Error while writing to backup file</string>
    <string name="backup_export_complete">Backup complete</string>
    <string name="backup_export_start">Starting export</string>
    <string name="backup_import_start">Starting import</string>
    <string name="backup_import_complete">Import complete</string>
    <string name="backup_import_error">Error while loading the data</string>
    <string name="title_item_list">Habits</string>
    <string name="title_item_detail">Habit Detail</string>
    <string name="save_item_button">Save Item</string>
    <string name="action_item_detail_title">Write NFC Tag</string>
    <string name="placholder">Placeholder</string>
    <string name="item_detail_occurences_title">Occurrences: </string>
    <string name="edit_habit">Edit Habit</string>
    <string name="action_item_search">Search Habits</string>
    <string name="item_search_hint">Type to filter habits</string>
    <string name="item_refresh">Refresh</string>


</resources>
