<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
    <item android:id="@+id/action_habit_add"
        android:title="@string/action_habit_add"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_content_new"/>
    <item android:id="@+id/action_export_data"
        android:title="@string/action_export"
        android:showAsAction="never" />

</menu>