<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="ch.isageek.tyderion.habittracker.item.AddItemFragment">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_habit_title"
        android:id="@+id/add_item_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_item_title_text"
        android:layout_alignTop="@+id/add_item_title"
        android:layout_toRightOf="@+id/add_item_title"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:hint="@string/edit_habit_title_hint"
        android:enabled="true"
        android:editable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_habit_description"
        android:id="@+id/add_item_description_title"
        android:layout_below="@+id/add_item_title"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/add_item_description_text"
        android:layout_below="@+id/add_item_description_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_habit_description_hint"
        android:editable="true"
        android:enabled="true" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/add_item_positive"
        android:layout_below="@+id/add_item_description_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_habit_positive_title"
        android:editable="false"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_item_button"
        android:id="@+id/save_item_button"
        android:layout_below="@+id/add_item_positive"
        android:enabled="true"
        android:clickable="false" />

</RelativeLayout>
