<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context="ch.isageek.tyderion.habittracker.EditHabit">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_habit_title"
        android:id="@+id/edit_habit_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_habit_title_text"
        android:layout_alignTop="@+id/edit_habit_title"
        android:layout_toRightOf="@+id/edit_habit_title"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:hint="@string/edit_habit_title_hint"
        android:editable="true"
        android:clickable="true"
        android:enabled="true"
        android:focusableInTouchMode="true"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_habit_description"
        android:id="@+id/textView"
        android:layout_below="@+id/edit_habit_title"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edit_habit_description_text"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:editable="true"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/edit_habit_description_hint" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_habit_positive"
        android:layout_below="@+id/edit_habit_description_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/edit_habit_positive_title" />

</RelativeLayout>
