<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.isageek.tyderion.habittracker.database.DataExportActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/backup_file_picker_title_string"
        android:id="@+id/backup_file_picker_title"
        android:layout_alignBottom="@+id/backup_pick_file_button"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/backup_pick_file_button"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacakup_pick_file_button_title"
        android:id="@+id/backup_pick_file_button"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/backup_button_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_button_default_location"
        android:id="@+id/backup_button_default"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backup_file_edit_text"
        android:layout_below="@+id/backup_file_picker_title"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/backup_button_default"
        android:enabled="true"
        android:editable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_export_button_title"
        android:id="@+id/backup_export_button"
        android:layout_below="@+id/backup_file_edit_text"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_import_button_title"
        android:id="@+id/backup_import_button"
        android:layout_below="@+id/backup_file_edit_text"
        android:layout_alignEnd="@+id/backup_file_edit_text" />
</RelativeLayout>
